# tksamc

./: .gitignore  LICENSE  MANIFEST.in  README  README.md  README.rst  README.txt  README_output.txt  REQUIREMENTS.txt  plot_results.py  pyproject.toml  run_local.py  setup.py  tksa_solver.py  tksamc.py
src/: a.out  legendre.h  tksaex.c  tksamc.c
tksamc/: cli.py  solver.py
